# dbt-demo

./: .gitignore  README.md  demo.md  profiles.yml  pyproject.toml
src/: .envrc.example  dbt_project.yml
src/macros/: bmi.sql  bmi.yml  total_attack.sql  total_attack.yml
src/models/marts/generation/: mart__generation__bmi_average.sql  mart__generation__strongest.sql  schema.yml
src/models/marts/individuals/: mart__individuals__bmi.sql  mart__individuals__data_roles.sql  mart__individuals__losers.sql  mart__individuals__winners.sql  schema.yml
src/models/staging/: schema.yml  source__pokemon.yml  sources.yml  stage__combats.sql  stage__pokemon.sql
