[tool.poetry]
name = "dbt-demo-data-days-2021"
version = "0.1.0"
description = ""
authors = ["Hugo Hjerten <hugo.hjerten@jayway.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dbt = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
